# well-prepared

./: Dockerfile  LICENSE  README.md  app.sh  pyproject.toml
well_prepared/: manage.py
well_prepared/api/: admin.py  models.py
well_prepared/api/migrations/: 0001_initial.py  0002_rename_section_category_and_more.py  0003_rename_section_item_category_and_more.py  0004_rename_event_templatecategory_template.py  0005_event_author_template_author.py  0006_alter_event_author_alter_template_author.py  0007_remove_item_icon_remove_templateitem_icon.py  0008_alter_category_display_closed_items.py
well_prepared/frontend/: forms.py  urls.py  views.py
well_prepared/frontend/templates/: _event-components.html  _template-components.html  dashboard.html  event-create.html  event-detail.html  event-list.html  template-category-create.html  template-category-edit.html  template-create.html  template-detail.html  template-edit.html  template-import.html  template-list.html
well_prepared/frontend/templates/partials/: category-list.html  event-toggle-open-button.html  item-detail.html  item-list.html  item-template-create-form.html  item-template-detail.html  item-template-edit-form.html  item-template-list.html  section-list.html  section-template-list.html  template-category-list.html  template-item-create.html  template-item-detail.html  template-item-edit.html  template-item-list.html
well_prepared/frontend/templatetags/: emoji.py  gravatar.py
well_prepared/static/css/: project.css
well_prepared/static/images/: site.webmanifest
well_prepared/templates/: 404.html  500.html  base.html  bootstrap.html
well_prepared/templates/registration/: logged_out.html  login.html
well_prepared/utils/: emoji.json  emoji.py
well_prepared/well_prepared/: asgi.py  settings.py  settings_prod.py  urls.py  wsgi.py
